src/snapshots/ebnf__transform__test__regex_plus_multiple_3.snap
---
source: src/transform.rs
expression: result
---
expressions:
  - lhs: ~0
    rhs:
      NonTerminal:
        - ~1
        - name: ""
  - lhs: ~1
    rhs:
      Multiple:
        - - NonTerminal:
              - C
              - name: ""
          - NonTerminal:
              - ~1
              - name: ""
        - name: ~
  - lhs: ~1
    rhs:
      NonTerminal:
        - C
        - name: ""
  - lhs: A
    rhs:
      Multiple:
        - - NonTerminal:
              - A
              - name: ""
          - NonTerminal:
              - B
              - name: ""
          - NonTerminal:
              - ~0
              - name: ""
        - name: ""

