src/snapshots/ebnf__transform__test__regex_question.snap
---
source: src/transform.rs
expression: result
---
expressions:
  - lhs: A
    rhs:
      NonTerminal:
        - A
        - name: ""
  - lhs: A
    rhs: Epsilon

