src/snapshots/ebnf__transform__test__sub_alternation_removal.snap
---
source: src/transform.rs
expression: result
---
expressions:
  - lhs: A
    rhs:
      NonTerminal:
        - A
        - name: ""
  - lhs: A
    rhs:
      NonTerminal:
        - B
        - name: ""
  - lhs: A
    rhs:
      NonTerminal:
        - c
        - name: ""

