src/snapshots/ebnf__transform__test__sub_alternation_removal_sub_multiple.snap
---
source: src/transform.rs
expression: result
---
expressions:
  - lhs: A
    rhs:
      NonTerminal:
        - B
        - name: ""
  - lhs: A
    rhs:
      Multiple:
        - - NonTerminal:
              - C
              - name: ""
          - NonTerminal:
              - D
              - name: ""
        - name: ""

