src/snapshots/ebnf__transform__test__sub_alternation_removal_sub_multiple_outer_multiple.snap
---
source: src/transform.rs
expression: result
---
expressions:
  - lhs: ~0
    rhs:
      NonTerminal:
        - B
        - name: ""
  - lhs: ~0
    rhs:
      Multiple:
        - - NonTerminal:
              - C
              - name: ""
          - NonTerminal:
              - D
              - name: ""
        - name: ""
  - lhs: A
    rhs:
      Multiple:
        - - NonTerminal:
              - ~0
              - name: ""
          - NonTerminal:
              - E
              - name: ""
        - name: ""

