src/snapshots/ebnf__transform__test__sub_sub_alternation_removal.snap
---
source: src/transform.rs
expression: result
---
expressions:
  - lhs: A
    rhs:
      NonTerminal:
        - B
        - name: ""
  - lhs: A
    rhs:
      NonTerminal:
        - C
        - name: ""
  - lhs: A
    rhs:
      NonTerminal:
        - D
        - name: ""
  - lhs: A
    rhs:
      NonTerminal:
        - E
        - name: ""

